# growthmonk-fable

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml
platform/: .env.example  pyproject.toml
platform/src/gm/: api.py  cli.py  config.py  db.py
platform/src/gm/audit/: bev.py  citations.py  compare.py  delta.py  fetch.py  group.py  pipeline.py  registry.py  safety.py  scoring.py
platform/src/gm/connections/: ads.py  gsc.py  vault.py
platform/src/gm/content/: briefs.py  engine_port.py  fixcloser.py
platform/src/gm/core/: panel.py  refusals.py  schedules.py
platform/src/gm/delivery/: console.py  evidence.py  leadcard.py  receipts.py  report.py  shares.py  verify.py  whatsapp.py  wordpress.py
platform/src/gm/infra/: costs.py  jobs.py  llm.py  scheduler.py
platform/src/gm/intel/: ads_ingest.py  labs.py  (+11 more)
platform/tests/: test_ads_port.py  test_briefs.py  test_citations.py  test_compare.py  test_competitor_discovery.py  test_competitor_profiles.py  test_connections.py  test_d0_integration.py  test_d2_cli.py  test_d2_competitive.py  test_d4_console.py  test_d4_refusals.py  test_d4_spend.py  test_d4_wire.py  test_default_schedules.py  test_detectors.py  test_draft_audit.py  test_engines.py  test_fetch_bev.py  test_fixcloser.py  test_group.py  test_gsc_ingest.py  test_inspectors.py  test_jobs.py  test_labs.py  test_leadcard.py  test_llm.py  test_local_presence.py  test_pipeline.py  test_rank_tracker.py  test_receipts.py  test_registry_data.py  test_report_api.py  test_scoring.py  test_serp.py  test_variance.py  test_whatsapp.py  test_wp_verify.py
(+77 files in other folders)
