[project]
name = "gm-platform"
version = "0.1.0"
description = "GrowthMonk Fable platform — Phase A: citation proof engine"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
gm = "gm.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer's API takes Option/Argument calls as parameter defaults by design
extend-immutable-calls = ["typer.Option", "typer.Argument"]
